--- a/.github/workflows/fetch_tvbox_configs.yml
+++ b/.github/workflows/fetch_tvbox_configs.yml
@@ -1,26 +1,31 @@
-name: 每天定时抓取 tvbox 相关配置代码
+name: 每天定时抓取tvbox相关配置代码
+
 on:
   schedule:
-    # UTC 时间每天 02:00 执行（北京时间 10:00）
+    # UTC时间每天02:00执行（北京时间10:00）
     - cron: '0 2 * * *'
 
 jobs:
   fetch-and-save:
     runs-on: ubuntu-latest
     steps:
+      # 步骤1：检出代码（从仓库拉取代码）
       - name: 检出代码
         uses: actions/checkout@v3
 
+      # 步骤2：设置Python环境
       - name: 设置 Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.10'  # 注意单引号，且版本号格式正确
 
-      - name: 运行抓取脚本
+      # 步骤3：执行Python脚本（抓取/合并配置）
+      - name: 执行 Python 脚本
         env:
+          # 从GitHub Secrets读取敏感信息（需提前在仓库Settings->Secrets配置）
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          "GITHUB_USERNAME":"${{ secrets.GITHUB_USERNAME }}"
+          'GITHUB_USERNAME': '${{ secrets.GITHUB_USERNAME }}'
           REPO_NAME: ${{ secrets.REPO_NAME }}
-          FILE_PATH:${{ secrets.FILE_PATH || 'source.txt' }}
-        run: 
-          python merge/fetch_tvbox_configs.py
+          FILE_PATH: ${{ secrets.FILE_PATH || 'source.txt' }}  
+        run: |
+          python merge/fetch_tvbox_configs.py  # 注意脚本路径是否正确
